[gd_scene load_steps=10 format=2]

[ext_resource path="res://Structures/Raft/raft_wood.png" type="Texture" id=1]
[ext_resource path="res://Structures/Trader/Trader.gd" type="Script" id=2]
[ext_resource path="res://Structures/Trader/coins.png" type="Texture" id=3]
[ext_resource path="res://Structures/Trader/bard.png" type="Texture" id=4]
[ext_resource path="res://Effects/Shaders/outline_shader.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 2.0

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CapsuleShape2D" id=3]
height = 14.0

[node name="Trader" type="YSort"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 141.0
margin_right = 330.0
margin_bottom = 141.0
rect_rotation = 90.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Sprite" parent="."]
position = Vector2( 55, 126 )
texture = ExtResource( 3 )
hframes = 6
frame = 5

[node name="Pedestals" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Pedestals"]
position = Vector2( 50, 17 )

[node name="Position2D2" type="Position2D" parent="Pedestals"]
position = Vector2( 120, 17 )

[node name="Position2D3" type="Position2D" parent="Pedestals"]
position = Vector2( 119, 62 )

[node name="Position2D4" type="Position2D" parent="Pedestals"]
position = Vector2( 120, 165 )

[node name="Position2D5" type="Position2D" parent="Pedestals"]
position = Vector2( 121, 114 )

[node name="Position2D6" type="Position2D" parent="Pedestals"]
position = Vector2( 51, 165 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 70, 84 )
texture = ExtResource( 4 )
hframes = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 69, 92 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleDown"
anims/IdleDown = SubResource( 2 )

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 70, 84 )
shape = SubResource( 3 )
[connection signal="input_event" from="InteractArea" to="." method="_on_InteractArea_input_event"]
[connection signal="mouse_entered" from="InteractArea" to="." method="_on_InteractArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_InteractArea_mouse_exited"]
